# subscription-based-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.prod  README.md  fly.toml
src/: account.rs  account_routers.rs  controllers.rs  email.rs  helpers.rs  identity_routers.rs  lemonsqueezy.rs  main.rs  requests_interfaces.rs  routers.rs  server.rs  storage.rs  subscription.rs  suscription.rs  token.rs  types.rs  utilities.rs  webhook_listener.rs
src/controllers/: account.rs  customer.rs  email.rs  identity.rs
src/email/: actions.rs
src/lemonsqueezy/: subscription.rs  webhook.rs
src/oauth/: google.rs
src/routers/: customer_actions.rs  customers.rs  identity.rs  public.rs  webhooks.rs
src/storage/: diesel_postgres.rs  mongo.rs  redis.rs
src/types/: account.rs  customer.rs  email.rs  incoming_requests.rs  lemonsqueezy.rs  subscription.rs
src/utilities/: api_messages.rs  helpers.rs  token.rs
