[package]
name = "eight-i"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6.0", features = [] }
serde = { version = "1", features = ["derive"] }
jsonwebtoken = "8.3.0"
serde_json = "1"
dotenv = "0.15.0"
mongodb = "2.6.0"
regex = "1.10.2"
tower = "0.4.13"
axum-extra = "0.9.1"
bcrypt = "0.15.0"
redis = "0.24.0"
tower-http = { version = "0.4.3", features = ["full"] }
rand = "0.8.5"
