[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.4", features = [] }
serde = { version = "1", features = ["derive"] }
jsonwebtoken = "9.2.0"
serde_json = "1"
dotenv = "0.15.0"
mongodb = "2.6.0"
regex = "1.10.2"
tower = { version = "0.4.13", features = ["limit", "buffer"] }
axum-extra = "^0.9.2"
bcrypt = "0.15.0"
redis =  { version = "0.24.0", features = ["tls-native-tls"]}
tower-http = { version = "0.5.1", features = ["full"] }
rand = "0.8.5"
chrono = "0.4.31"
sha2 = "0.10.8"
hmac = "0.12.1"
hex = "0.4.3"
tokio-diesel = "0.3.0"
diesel = { version = "2.1.4", features = ["postgres", "r2d2"] }
r2d2 = "0.8.10"
fern = "0.6.2"
log = "0.4.20"
reqwest = "0.11.23"

[[bin]]
name = "app"
path = "src/main.rs"
